fix: better layout on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -11,19 +11,17 @@ body {
   background: linear-gradient(to top, #ffd9fc, #ffe9e3);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   min-height: 100vh;
   margin: 0;
-  position: relative;
+  align-items: center;
 }
 
 #footer {
-  position: absolute;
-  bottom: 10px;
-  left: 0;
+  margin: auto 20px 0 20px;
+  padding-top: 40px;
   width: 100%;
   text-align: center;
+  flex-grow: 0;
 }
 
 #root {
@@ -35,6 +33,8 @@ body {
   margin-top: 5px;
   margin-bottom: 40px;
   filter: drop-shadow(6px 6px rgba(0, 0, 0, 0.4));
+  width: 156px;
+  height: 156px;
 }
 
 .receipt {
@@ -57,7 +57,7 @@ body {
   font-family: "IBM VGA 9x16", "Courier New", Courier, monospace;
   background-color: #fff;
   color: #000;
-  border: 4px solid #000;
+  border: 6px solid #000;
   padding: 8px 16px;
   font-size: 18px;
   letter-spacing: 1px;
@@ -77,12 +77,12 @@ body {
 }
 
 .compatibility-notice {
-  border: 6px dashed #000;
+  border: 3px dashed #000;
   background-color: #fcc;
   padding: 20px;
-  margin-bottom: 40px;
+  margin: 40px auto 40px auto;
   text-align: center;
-  max-width: 384px;
+  max-width: 192px;
   box-sizing: border-box;
 }
 
@@ -96,6 +96,11 @@ body {
   cursor: pointer;
   background-color: #fff;
   border: 6px dashed #000;
+
+  canvas {
+    width: 100%;
+    height: auto;
+  }
 }
 
 #preview-container.text-mode {
@@ -179,4 +184,34 @@ button:disabled {
 
 input[type="file"] {
   display: none;
+}
+
+@media (max-width: 500px) {
+  #preview-container {
+    width: 192px;
+  }
+}
+
+@media (max-height: 600px) {
+  .mascot {
+    width: 78px;
+    height: 78px;
+  }
+
+  .receipt {
+    border: 3px solid #000;
+  }
+
+  .mode-toggle button {
+    border: 3px solid #000;
+  }
+
+  #preview-container {
+    border: 3px dashed #000;
+  }
+
+  button, .mode-toggle button {
+    padding: 8px 12px;
+    font-size: 16px;
+  }
 }
